refactor: Controladores para que no haya bucles circulares con los Groups
