# openapi_4vgym.json
@@ -39,7 +39,8 @@
           { "name": "with_bookings", "in": "query", "schema": { "type": "boolean", "default": false } }
         ],
         "responses": {
-          "200": { "description": "successful operation" }
+          "200": { "description": "successful operation" },
+          "404": { "description": "Client not found", "content": { "application/json": { "schema": { "$ref": "#/components/schemas/Error" } } } }
         }
       }
     },
@@ -64,6 +65,99 @@
         "responses": {
           "200": { "description": "Successful operation" },
           "400": { "description": "Validation Error" }
+        }
+      }
+    }
+  },
+  "components": {
+    "schemas": {
+      "Song": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int64", "example": 10 },
+          "name": { "type": "string", "example": "La morocha" },
+          "duration_seconds": { "type": "integer", "example": 245 }
+        }
+      },
+      "Error": {
+        "type": "object",
+        "properties": {
+          "code": { "type": "integer", "format": "int32", "example": 21 },
+          "description": { "type": "string", "example": "The name is mandatory" }
+        }
+      },
+      "ActivityList": {
+        "type": "object",
+        "properties": {
+          "data": { "type": "array", "items": { "$ref": "#/components/schemas/Activity" } },
+          "meta": { "items": { "$ref": "#/components/schemas/Metadata" } }
+        }
+      },
+      "Activity": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int64", "example": 10 },
+          "max_participants": { "type": "integer", "format": "int64", "example": 25 },
+          "clients_signed": { "type": "integer", "format": "int64", "example": 10 },
+          "type": { "type": "string", "default": "BodyPump", "enum": ["BodyPump", "Spinning", "Core"] },
+          "play_list": { "type": "array", "items": { "$ref": "#/components/schemas/Song" } },
+          "date_start": { "type": "string", "format": "date-time" },
+          "date_end": { "type": "string", "format": "date-time" }
+        }
+      },
+      "Metadata": {
+        "type": "object",
+        "properties": {
+          "page": { "type": "integer", "format": "int64", "example": 11 },
+          "limit": { "type": "integer", "format": "int64", "example": 10 },
+          "total-items": { "type": "integer", "format": "int64", "example": 100 }
+        }
+      },
+      "BookingNew": {
+        "type": "object",
+        "properties": {
+          "activity_id": { "type": "integer", "format": "int64", "example": 2 },
+          "client_id": { "type": "integer", "format": "int64", "example": 12 }
+        }
+      },
+      "Client": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int64", "example": 10 },
+          "type": { "type": "string", "default": "standard", "enum": ["standard", "premium"] },
+          "name": { "type": "string", "example": "Miguel Goyena" },
+          "email": { "type": "string", "example": "miguel_goyena@cuatrovientos.org" },
+          "activities_booked": { "type": "array", "items": { "$ref": "#/components/schemas/Booking" } },
+          "activity_statistics": { "type": "array", "items": { "$ref": "#/components/schemas/StatisticsByYear" } }
+        }
+      },
+      "Booking": {
+        "type": "object",
+        "properties": {
+          "id": { "type": "integer", "format": "int64", "example": 10 },
+          "activity": { "$ref": "#/components/schemas/Activity" },
+          "client_id": { "type": "integer", "format": "int64", "example": 10 }
+        }
+      },
+      "StatisticsByYear": {
+        "type": "object",
+        "properties": {
+          "year": { "type": "integer", "format": "int64", "example": 2025 },
+          "statistics_by_type": { "type": "array", "items": { "$ref": "#/components/schemas/StatisticsByType" } }
+        }
+      },
+      "StatisticsByType": {
+        "type": "object",
+        "properties": {
+          "type": { "type": "string", "default": "BodyPump", "enum": ["BodyPump", "Spinning", "Core"] },
+          "statistics": { "items": { "$ref": "#/components/schemas/Statistics" } }
+        }
+      },
+      "Statistics": {
+        "type": "object",
+        "properties": {
+          "num_activities": { "type": "string", "format": "int64", "example": 25 },
+          "num_minutes": { "type": "string", "format": "int64", "example": 8250 }
         }
       }
     }
