# src/Controller/ClientController.php
@@ -4,6 +4,7 @@
 namespace App\Controller;
 
 use App\Entity\Client;
+use App\Repository\ClientRepository;
 use Symfony\Bundle\FrameworkBundle\Controller\AbstractController;
 use Symfony\Component\HttpFoundation\JsonResponse;
 use Symfony\Component\Routing\Annotation\Route;
@@ -12,15 +13,21 @@ use App\Service\StatisticsService;
 
 class ClientController extends AbstractController
 {
-    // src/Controller/ClientController.php
+
 
     #[Route('/clients/{id}', name: 'get_client', methods: ['GET'])]
     public function show(
-        Client $client,
+        int $id,
+        ClientRepository $clientRepository,
         StatisticsService $statsService,
         #[MapQueryParameter] bool $with_statistics = false,
         #[MapQueryParameter] bool $with_bookings = false
     ): JsonResponse {
+        $client = $clientRepository->find($id);
+
+        if (!$client) {
+            return $this->json(['code' => 404, 'description' => 'Cliente no encontrado'], 404);
+        }
 
         // 1. Datos básicos (siempre se devuelven)
         $data = [
@@ -36,13 +43,12 @@ class ClientController extends AbstractController
             $data['activities_booked'] = $client->getBookings();
         }
 
-        // 3. Lógica para Estadísticas (El reto de los 2 puntos)
+        // 3. Lógica para Estadísticas
         if ($with_statistics) {
             $data['activity_statistics'] = $statsService->getClientStatistics($client->getId());
         }
 
-        // Usamos los grupos de serialización para que los objetos internos (Booking, Activity)
-        // se vean bonitos y según el YAML
+        // Usamos los grupos de serialización para formatear la respuesta según el YAML
         return $this->json($data, 200, [], [
             'groups' => ['client:read', 'booking:read', 'activity:read']
         ]);
